@@ -75,7 +75,6 @@ admin.caption.usergroup.url=URL
 admin.caption.usergroup.userfidield=Name of field of user-id
 admin.caption.usergroup.username=Username
 admin.caption.usepreview=Use Preview
-admin.caption.useversioning=Use versioning
 admin.caption.virtualwiki=Virtual Wiki
 admin.message.changesnotsaved=Changes HAVE NOT been saved
 admin.message.changessaved=Changes saved
