@@ -74,7 +74,6 @@ admin.caption.usergroup.searchRestrictions=S\u00F8ge begr\u00E6nsninger
 admin.caption.usergroup.url=URL
 admin.caption.usergroup.userfidield=Feltnavn for brugerid
 admin.caption.usergroup.username=Brugerid
-admin.caption.useversioning=Brug versionering
 admin.caption.virtualwiki=Virtuel Wiki
 admin.message.changesnotsaved=Changes HAVE NOT been saved
 admin.message.changessaved=\u00C6ndringer gemt
