@@ -74,7 +74,6 @@ admin.caption.usergroup.searchRestrictions=Einschr\u00E4nkungen der Suche
 admin.caption.usergroup.url=URL
 admin.caption.usergroup.userfidield=Feldname der Benutzer-ID
 admin.caption.usergroup.username=Benutzername
-admin.caption.useversioning=Versionierung verwenden
 admin.caption.virtualwiki=Virtuelles Wiki
 admin.message.changesnotsaved=\u00C4nderungen wurden nicht gespeichert.
 admin.message.changessaved=\u00C4nderungen wurden gespeichert.
