@@ -75,7 +75,6 @@ admin.caption.usergroup.searchRestrictions=Restrictions de recherche
 admin.caption.usergroup.url=URL
 admin.caption.usergroup.userfidield=Nom du champ de l'identifiant utilisateur
 admin.caption.usergroup.username=Nom d'utilisateur
-admin.caption.useversioning=Utiliser l'historisation des versions
 admin.caption.virtualwiki=Wiki virtuelle
 admin.message.changesnotsaved=Les modifications NON PAS ETE sauvergard\u00e9es
 admin.message.changessaved=Changements enregistr\u00e9s
