@@ -74,7 +74,6 @@ admin.caption.usergroup.searchRestrictions=Keres\u00E9s korl\u00E1toz\u00E1sok
 admin.caption.usergroup.url=URL
 admin.caption.usergroup.userfidield=A felhaszn\u00E1l\u00F3i azonos\u00EDt\u00F3 mez\u0151 neve
 admin.caption.usergroup.username=Felhaszn\u00E1l\u00F3n\u00E9v
-admin.caption.useversioning=V\u00E1ltozatok haszn\u00E1lata
 admin.caption.virtualwiki=Virtu\u00E1lis Wiki
 admin.message.changesnotsaved=Changes HAVE NOT been saved
 admin.message.changessaved=V\u00E1ltoz\u00E1sok elmentve
