@@ -75,7 +75,6 @@ admin.caption.usergroup.searchRestrictions=S\u00f8kebregrensninger
 admin.caption.usergroup.url=URL
 admin.caption.usergroup.userfidield=Navn p\u00e5 felt for bruker-id
 admin.caption.usergroup.username=Brukernavn
-admin.caption.useversioning=Bruk versjonering
 admin.caption.virtualwiki=Virtuell Wiki
 admin.message.changesnotsaved=Changes HAVE NOT been saved
 admin.message.changessaved=Endringer lagret
