@@ -75,7 +75,6 @@ admin.caption.usergroup.url=URL
 admin.caption.usergroup.userfidield=\u7528\u6236ID\u5b57\u6bb5\u7684\u540d\u7a31
 admin.caption.usergroup.username=\u7528\u6236\u540d
 admin.caption.usepreview=\u4f7f\u7528\u9810\u89bd
-admin.caption.useversioning=\u4f7f\u7528\u4fee\u8a02\u7248\u672c
 admin.caption.virtualwiki=\u865b\u64ec Wiki
 admin.message.changesnotsaved=\u4fee\u6539\u4e26\u672a\u4fdd\u5b58
 admin.message.changessaved=\u4fdd\u5b58\u4fee\u6539
